--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-;
+}
+
+.btn {
+    @apply shadow-md py-3 px-6 rounded-md transition duration-300
+}
+
+.btn-blue{
+    @apply bg-blue-800 text-white
+}
+
+.btn-white{
+    @apply bg-white text-black
+}
