--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -28,3 +28,41 @@ body{
 .text-teal-color{
     color: #DBE8E7;
 }
+
+.gallery__img1 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; 
+    border-top-left-radius: 2rem/* 48px */;
+}
+
+.gallery__img2 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; 
+}
+
+.gallery__img3 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; 
+    border-top-right-radius: 2rem/* 48px */;
+    border-bottom-right-radius: 2rem/* 48px */;
+}
+
+.gallery__img4 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; 
+    border-bottom-left-radius: 2rem/* 48px */;
+}
+
+svg:hover {
+    fill: #ff6660;
+}
+
+  
