feat: CRUD, House Forms, Registration Dropdown

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,10 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*{
     font-family: 'Poppins', sans-;
 }
 
@@ -13,56 +10,58 @@ body{
     @apply shadow-md py-3 px-6 rounded-md transition duration-300;
 }
 
-.btn-blue{
-    @apply bg-blue-800 text-white;
+/* light mode - buttons */
+.btn-sky{
+    @apply bg-sky-800 text-white hover:bg-neutral-100 hover:text-neutral-900;
 }
 
 .btn-white{
-    @apply bg-white text-black;
+    @apply bg-white text-black hover:bg-neutral-800 hover:text-white;
 }
 
-.btn-teal{
-    @apply bg-teal-800 text-white;
-}
-
-.text-teal-color{
-    color: #DBE8E7;
-}
-
-.gallery__img1 {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block; 
-    border-top-left-radius: 2rem/* 48px */;
-}
-
-.gallery__img2 {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block; 
-}
-
-.gallery__img3 {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block; 
-    border-top-right-radius: 2rem/* 48px */;
-    border-bottom-right-radius: 2rem/* 48px */;
-}
-
-.gallery__img4 {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block; 
-    border-bottom-left-radius: 2rem/* 48px */;
+/* dark mode - buttons */
+.btn-dark{
+    @apply bg-sky-800 text-white hover:bg-neutral-800 hover:text-white dark:hover:bg-white dark:hover:text-black focus:ring-neutral-800;
 }
 
 svg:hover {
-    fill: #ff6660;
+    fill: rgb(28, 197, 231);
 }
 
-  
+.house-small-img img{
+    height: 100px;
+    width: 100px;
+    margin: 10px 0;
+    cursor: pointer;
+    display: block;
+    opacity: .6;
+    
+}
+
+.house-small-img {
+    float: left;
+
+}
+.house-small-img img:hover{
+    opacity: 1;
+
+}
+
+.house-img{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -0%);
+    position: relative;
+
+}
+
+.img-container img{
+    height: 500px;
+    
+}
+
+.img-container {
+    float: right;
+    padding: 10px;
+}
+
